db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mysql
    namespace: default
    labels:
        app: mysql
spec:
    selector:
        matchLabels:
            app: mysql
    replicas: 1
    template:
        metadata:
            labels:
                app: mysql
        spec:
            containers:
                - name: mysql
                  image: mysql:latest
                  ports:
                      - containerPort: 3306
            volumes:
                - name: mysql-persistent-storage
                  persistentVolumeClaim:
                      claimName: mysql-pv-claim
