deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: wordpress
    namespace: default
    labels:
        app: wordpress
spec:
    selector:
        matchLabels:
            app: wordpress
    replicas: 1
    template:
        metadata:
            labels:
                app: wordpress
        spec:
            containers:
                - name: wordpress
                  image: wordpress:latest
                  ports:
                      - containerPort: 80
