db-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: mysql
spec:
    selector:
        app: mysql
    type: ClusterIP
    ports:
        - name: mysql
          protocol: TCP
          port: 3306
          targetPort: 3306
