ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: wordpress-ingress
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
    rules:
        - host: wp.cloudops-10.ucll.cloud
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: wordpress
                            port:
                                number: 80
    # tls:
    #     - hosts:
    #           - wp.cloudops-10.ucll.cloud
    #       secretName: wp-tls
